Java 8 & mc 1.12.2 compatibility for some modules